vlib/v/checker/tests/orm_insert_object_with_mismatched_type_error.vv
import db.sqlite
import json

struct Tiddler {
	id      int
	created int
}

struct Tiddlers {
	id      int @[primary; sql: serial]
	created string
}

fn main() {
	tiddler := json.decode(Tiddler, '{}') or { Tiddler{} }
	db := sqlite.connect(':memory:') or { panic(err) }
	sql db {
		create table Tiddlers
		insert tiddler into Tiddlers
	}!
}
